v1.0接口： 里程碑：全部测试通过。
